--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="cr.ac.una.controlfinancierocamera">
+    package="cr.ac.una.LocationWiki">
     <!--
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
@@ -22,20 +22,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ControlFinancieroCamera"
+        android:theme="@style/Theme.LocationWiki"
         tools:targetApi="31">
         <activity
-            android:name="cr.ac.una.controlfinancierocamera.WebViewActivity"
+            android:name="cr.ac.una.LocationWiki.WebViewActivity"
             android:exported="false" />
 
         <service
-            android:name="cr.ac.una.controlfinancierocamera.service.LocationService"
+            android:name="cr.ac.una.LocationWiki.service.LocationService"
             android:enabled="true"
             android:exported="true"
             android:foregroundServiceType="location" />
 
         <activity
-            android:name="cr.ac.una.controlfinancierocamera.MainActivity"
+            android:name="cr.ac.una.LocationWiki.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
